# kotti_file

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGES.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
.gsd/milestones/M003/slices/S01/tasks/: T01-SUMMARY.md
docs/: index.md
src/kotti_file/: __init__.py
tests/: conftest.py  test_smoke.py
